# Crypto-Data-Engine

./: .env  .gitignore  AGENTS.md  BinanceProcessor.py  CLAUDE.md  Dockerfile  KLinesProcessor.py  README.md  TODO  aggTrades_strategy_design.md  api_trading.py  binance_btc_csv_maker.py  bybit_btc_csv_maker.py  bybit_btc_csv_maker_multithreading.py  calculate_technical_indicators.py  check.py  config.json  create_list_directly.py  create_thread.py  generate_list_drectly.py  generate_nested_pickle.py  get_recent_trade_list.py  index.html  klines_processor.py  main.py  market_depth_data.py  path_utils.py  pre_process.py  pyproject.toml  read_csv.py  read_data.py  read_h5.py  read_h52list.py  read_parquet_list.py  task.md  test.py  tick_to_backtest.md  url_config.json  utils.py
.claude/: settings.local.json
analysis_specific/: bench_mark.py  dual_MA.py
back_test/: Account.py  Broker.py  api.md  arbitrage_analysis.py  back_test_evaluation.py  backtest_simulation.py  get_btc_info.py  main.py  mann.py  mann_backup.py  read_large_files.py  result.txt  strategy.py  syntax_test.py  transactions.txt
binance_btc/: 1s.csv
config/: config.yml
core/: analyzer.py  factory.py  processor.py  saver.py
cpp/: build.bat
data/: funding_fees.py  merge_fees.py
data_handle/: load_data.py
demo/: main.ipynb  utils.py
deploy/: Dockerfile  docker-compose.celery.yml  docker-compose.ray.yml  docker-compose.redis.yml  docker-compose.yml  flower.Dockerfile
docs/: API.md  API_README.md  ARCHITECTURE.md  PIPELINE_GUIDE.md  QUANTSPLAYBOOK_FACTOR_FORMULAS.md
feature/: 1.py  100.py  101.py  53.py  54.py  98.py  99.py  CNN-LSTM.py  CNN_model.py  CUSUM_filter.py  Dataloader.py  Factor.py  GP.py  IC_calculator.py  RSRI.py  alphas101.py  bar_evaluation.py  candle_stick.py  corr.py  diff_implementation.py  factor_check.py  factor_evaluate_processor.py  factor_evaluation.py  feature_generation.py  feature_implementation.py  fractional_diff.py  future_implementation.py  kernel_regression.py  labeling.py  load_config.yaml  merge_pandas.py  pattern.py  read_alpha_df.py  read_data.py  read_large_files.py  record.text  support.py  technical_analysis.py  technical_indicator.py  us_shares.py  (+2 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
helpers/: func_storage.py  logger.py  model.py  proxy.py  utils.py
processors/: binance_processor.py  bybit_processor.py  okx_processor.py
read_data/: create_h5.py  create_list_directly.py  generate_pickles.py  read_csv.py  test.py
scripts/: run_dollarbar_backtest.py  run_dollarbar_factor_test.py  run_real_backtest.py  run_timebar_backtest.py
src/: main.py
(+251 files in other folders)
