[project]
name = "crypto-data-engine"
version = "0.1.0"
description = "initialize project"
authors = [
    {name = "shiromae0",email = "125993163+shiromae0@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "ray (>=2.47.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
