[project]
name = "crypto-data-engine"
version = "0.1.0"
description = "initialize project"
authors = [
    {name = "shiromae0",email = "125993163+shiromae0@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "ray[default] (>=2.47.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "grpcio (>=1.73.1,<2.0.0)"
]

packages = [{ include = "crypto_data_engine", from = "src" }]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
